Add HTML <title> to all pages

--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 <meta name="robots" content="ALL">
 <meta name="revisit-after" content="30 days">
-<title>{% block title %} GRNET: AAI Federation {% endblock %}</title> 
+<title>{% trans "GRNET AAI Federation" %} :: {% block title %}{% endblock %}</title> 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" lang="el">
 <link href="/static/style.css" rel="stylesheet" type="text/css">
 <link href="/static/overlib.css" rel="stylesheet" type="text/css">
