--- a/wayf/templates/el/help.html
+++ b/wayf/templates/el/help.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Help" %}{% endblock %}
 {% block header %}{% trans "Help" %}{% endblock %}
 {% block content %}
 <p>
