--- a/wayf/templates/el/support.html
+++ b/wayf/templates/el/support.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "User support" %}{% endblock %}
 {% block header %}{% trans "User support" %}{% endblock %}
 {% block content %}
 Παρουσιάστηκε πρόβλημα κατά τη χρήση της Υποδομής Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ. Παρακαλούμε επικοινωνήστε με τον οικείο φορέα σας.
