--- a/wayf/templates/el/wayf_from_sp.html
+++ b/wayf/templates/el/wayf_from_sp.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}Επιλογή οικείου φορέα{% endblock %}
 {% block header %}Επιλογή οικείου φορέα{% endblock %}
 {% block content %}
 <p>Βρίσκεστε σε αυτήν τη σελίδα επειδή προσπαθήσατε να προσπελάσετε μια υπηρεσία που χρησιμοποιεί την Υποδομή Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ. Προκειμένου να προχωρήσετε, θα πρέπει να επιλέξετε τον Οικείο Φορέα σας από τον παρακάτω κατάλογο. Προαιρετικά, μπορείτε να αποθηκεύσετε την επιλογή αυτή, ώστε να μην ερωτηθείτε σε επόμενες χρήσεις της υποδομής.</p>
