--- a/wayf/templates/el/wayf_set.html
+++ b/wayf/templates/el/wayf_set.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Select your home institution" %}{% endblock %}
 {% block header %}{% trans "Select your home institution" %}{% endblock %}
 {% block content %}
 <p>
