--- a/wayf/templates/en-us/support.html
+++ b/wayf/templates/en-us/support.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "User support" %}{% endblock %}
 {% block header %}{% trans "User support" %}{% endblock %}
 {% block content %}
 A problem occured while attempting to use GRNET's AAI. Please contact your Home Organization.
