--- a/wayf/templates/el/faq.html
+++ b/wayf/templates/el/faq.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "FAQ" %}{% endblock %}
 {% block header %}{% trans "FAQ" %}{% endblock %}
 {% block content %}
 <h2>Για χρήστες</h2>
