--- a/wayf/templates/en-us/index.html
+++ b/wayf/templates/en-us/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "About" %}{% endblock %}
 {% block header %}{% trans "About" %}{% endblock %}
 {% block content %}
 <p>
