--- a/wayf/templates/en-us/wayf.html
+++ b/wayf/templates/en-us/wayf.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block header %}{% trans "Permanently set your Home Organization" %}{% endblock %}
 {% block content %}
 <p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-enabled resources. Don't use this feature if you use several AAI accounts.</p>
