--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -51,7 +51,7 @@
 			<table border="0" cellpadding="0" cellspacing="0" width="100%">
 			<tbody>
 				<tr>
-					<td width="20">&nbsp;</td>
+					<td width="14">&nbsp;</td>
 					<td>
 						<table >
 						<tr>
@@ -88,7 +88,7 @@
 
 <table border="0" cellpadding="1" cellspacing="0">
 	<tr>
-		<td valign="top" width="14"><img src="static/images/arrow-12.gif" width="12" height="12" alt="arrow"></td>
+		<td valign="top" width="14"><img src="/static/images/arrow-12.gif" width="12" height="12" alt="arrow"></td>
 		<td valign="top">
 			<p class="footer">{% trans "The Greek Research and Technology Network (GRNET) provides the Hellenic Academic, Research and Education community with advanced services, high-capacity national and international Internet connectivity, assisting the operation of all Universities, Technologial Educational Institutions and Research Institutes in Greece."%}</p>
 		</td>
