Fixed 404 & 500 template titles and turned debugging off

--- a/wayf/templates/404.html
+++ b/wayf/templates/404.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Page not found" %}{% endblock %}
 {% block header %}{% trans "Page not found" %}{% endblock %}
 {% block content %}
 {% trans "The page you requested could not be found!" %}
