--- a/wayf/templates/500.html
+++ b/wayf/templates/500.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% block title %}{% trans "Server error" %}{% endblock %}
 {% block header %}{% trans "Server error" %}{% endblock %}
 {% block content %}
 {% trans "The page you requested cannot be displayed because the server experienced a technical problem. We apologize for the inconvenience." %}
