Remove Helpdesk's email & telephone, they have enough spam already.

--- a/wayf/templates/el/faq.html
+++ b/wayf/templates/el/faq.html
@@ -35,7 +35,7 @@
 </ul>
 Τα παραπάνω μπορούν να διατεθούν και έτοιμα από το ΕΔΕΤ με τη μορφή ενός
 προσαρμοσμένου «κουτιού υπηρεσιών». Για περισσότερες πληροφορίες μπορείτε να
-επικοινωνήσετε με το helpdesk@grnet.gr ή τηλεφωνικά στo 800-11-GRNET.</li>
+επικοινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
 <li><b>Πώς μπορώ να προσφέρω μια υπηρεσία στα μέλη της Ομοσπονδίας;</b>
 <br />Απαιτείται η εγκατάσταση λογισμικού ΑΑΙ «Service Provider» συμβατό με
   SAML 2.0. Προτείνεται το
@@ -46,7 +46,6 @@
 <br />Την Ομοσπονδία συντηρεί και διαχειρίζεται το Κέντρο Δικτύων (Network
 Operations Centre, NOC) του ΕΔΕΤ. Για προσθαφαιρέσεις, λοιπές αλλαγές και
 επίλυση προβλήματων <i>σχετικά με την ομοσπονδία αυτή καθ' αυτή</i> μπορείτε
-να επικοινωνήσετε με την υποστήριξη του Κέντρου Δικτύων στο helpdesk@grnet.gr
-ή τηλεφωνικά στο 800-11-GRNET.</li>
+να επικοινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
 </ul>
 {% endblock %}
