--- a/wayf/templates/el/help.html
+++ b/wayf/templates/el/help.html
@@ -22,7 +22,8 @@
 {% endif %}
 </ul>
 {% endif %}</li>
-<li>
-Αν το πρόβλημα εμφανίστηκε <b>στην ενδιάμεση ιστοσελίδα <a href="http://wayf.grnet.gr">http://wayf.grnet.gr</a></b>, μπορείτε να επικoινωνείτε με την διεύθυνση helpdesk@grnet.gr, ή το τηλέφωνο 800-11-GRNET για να αναφέρετε το πρόβλημα.</li>
+<li>Αν το πρόβλημα εμφανίστηκε <b>στην ενδιάμεση ιστοσελίδα <a
+href="http://wayf.grnet.gr">http://wayf.grnet.gr</a></b>,
+μπορείτε να επικoινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
 </ul>
 {% endblock %}
