--- a/wayf/templates/el/index.html
+++ b/wayf/templates/el/index.html
@@ -95,8 +95,7 @@ href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του
 <p>
 Τα παραπάνω μπορούν να διατεθούν και έτοιμα από το ΕΔΕΤ με τη μορφή ενός
 προσαρμοσμένου «κουτιού» υπηρεσιών. Για περισσότερες πληροφορίες μπορείτε να
-επικοινωνήσετε με το <a href=mailto:helpdesk@grnet.gr>helpdesk@grnet.gr</a> ή
-τηλεφωνικά στo 800-11-GRNET (800-11-47638).
+επικοινωνήσετε με το Helpdesk του ΕΔΕΤ.
 </p>
 
 <p>
