--- a/wayf/templates/en-us/faq.html
+++ b/wayf/templates/en-us/faq.html
@@ -25,10 +25,11 @@
   <a href="http://shibboleth.internet2.edu/">Shibboleth IdP</a>, developed by the USA NREN (<a href="http://www.internet2.edu">Internet2</a>), is recommended.
   </li>
 </ul>
-The above software is also provided in a custom, pre-configured &quot;service box&quot; by GRNET. For more information, pleas contact <a href="mailto:helpdesk@grnet.gr">helpdesk@grnet.gr</a> or dial 800-11-GRNET.</li>
+The above software is also provided in a custom, pre-configured &quot;service
+box&quot; by GRNET. For more information, please contact GRNET's Helpdesk</li>
 <li><b>How can I provide a service to the Federation's members?</b>
 <br />You must install an AAI &quot;Service Provider&quot; software, compatible with the SAML 2.0 specification. <a href="http://shibboleth.internet2.edu/">Shibboleth SP</a>, developed by the USA NREN (<a href="http://www.internet2.edu">Internet2</a>), is recommended.</li>
 <li><b>Who is operating the Federation's infrastructure?</b>
-<br />The Federation is operated by GRNET's Network Operations Centre (NOC). For additions, removals, other changes and troubleshooting <i>regarding the Federation itself</i> you may contact the NOC's support at <a href="mailto:helpdesk@grnet.gr">helpdesk@grnet.gr</a> or dial 800-11-GRNET.</li>
+<br />The Federation is operated by GRNET's Network Operations Centre (NOC). For additions, removals, other changes and troubleshooting <i>regarding the Federation itself</i> you may contact GRNET's Helpdesk.</li>
 </ul>
 {% endblock %}
