--- a/wayf/templates/en-us/help.html
+++ b/wayf/templates/en-us/help.html
@@ -23,6 +23,6 @@ According to your selected Home Organization, &quot;<b>{{ idpname }}</b>&quot;, 
 </ul>
 {% endif %}</li>
 <li>
-If the problem showed up in the <b>intermediate webpage, <a href="http://wayf.grnet.gr">wayf.grnet.gr</a></b>, then you should contact GRNET's helpdesk via e-mail at &quot;helpdesk@grnet.gr&quot; or telephone at 800-11-GRNET to report the issue.</li>
+If the problem showed up in the <b>intermediate webpage, <a href="http://wayf.grnet.gr">wayf.grnet.gr</a></b>, then you should contact GRNET's Helpdesk.</li>
 </ul>
 {% endblock %}
