--- a/wayf/templates/en-us/index.html
+++ b/wayf/templates/en-us/index.html
@@ -93,11 +93,7 @@ developed as part of GÈANT2, to ease co-operation between the academic
 community and European institutions.
 </p>
 
-<p>
-For more information, please contact <a 
-href=mailto:helpdesk@grnet.gr>helpdesk@grnet.gr</a> or dial 800-11-GRNET 
-(800-11-47638).
-</p>
+<p>For more information, please contact GRNET's Helpdesk.</p>
 
 <p>
 Documentation:
