Fixed cookie expiration issue and wayf_from_sp template

--- a/wayf/templates/en-us/wayf_from_sp.html
+++ b/wayf/templates/en-us/wayf_from_sp.html
@@ -20,9 +20,9 @@
 	}
 	</script>
 	<div id="userprefs">
-	<input type="checkbox" name="save" value="1" onclick="toggleRadios();"/>Αποθήκευση της προτίμησης:</input>
-	<input type="radio" id="sesssave" name="savetype" value="session" disabled="true" checked="true" />Μέχρι να κλείσω το browser</input>
-	<input type="radio" id="permsave" name="savetype" value="perm" disabled="true" />Μόνιμα</input><br />
+	<input type="checkbox" name="save" value="1" onclick="toggleRadios();"/>Save my preference:</input>
+	<input type="radio" id="sesssave" name="savetype" value="session" disabled="true" checked="true" />For this browser session</input>
+	<input type="radio" id="permsave" name="savetype" value="perm" disabled="true" />Permanently</input><br />
 	</div>
 </form>
 </div>
