Changed GEANT's E to É

--- a/wayf/templates/el/index.html
+++ b/wayf/templates/el/index.html
@@ -87,7 +87,7 @@ Shibboleth και απαρτίζεται από τους παρακάτω παρ
 <p>
 Ταυτόχρονα, προσφέρεται και σύνδεση με τις <a
 href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του eduGAIN</a>
-που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GEANT2, ώστε τα μέλη
+που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GÉANT2, ώστε τα μέλη
 της κοινότητας να μπορούν να απολαμβάνουν και υπηρεσίες από ευρωπαϊκούς φορείς
 και αντιστρόφως.
 </p>
