--- a/wayf/templates/en-us/index.html
+++ b/wayf/templates/en-us/index.html
@@ -89,7 +89,7 @@ federation.</p>
 <p>
 At the same time, access is provided to <a 
 href="http://www.edugain.org">eduGAIN's european AAI services</a> which was 
-developed as part of GÈANT2, to ease co-operation between the academic 
+developed as part of GÉANT2, to ease co-operation between the academic 
 community and European institutions.
 </p>
 
