--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -55,17 +55,17 @@
 					<td>
 						<table >
 						<tr>
-							<td><a href="http://aai.grnet.gr"> <img src="/static/images/aai.gif" width="655" height="26" alt="aai" title="aai" border="0"></td>
+							<td><a href="http://aai.grnet.gr/"> <img src="/static/images/aai.gif" width="655" height="26" alt="aai" title="aai" border="0"></td>
 						</tr>
 						<tr>
 							<td valign="top">
 								<table border="0" cellpadding="2" cellspacing="0" width="100%" height="100%">
 									<tr>
-										<td valign="top"><a href="http://www.grnet.gr" target="_blank"><img src="/static/images/grnet.gif" border="0" width="85" height="94" alt="GRNET" title="GRNET"></a></td>
+										<td valign="top"><a href="http://www.grnet.gr/" target="_blank"><img src="/static/images/grnet.gif" border="0" width="85" height="94" alt="GRNET" title="GRNET"></a></td>
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
-												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> :: <a href="/faq">{% trans "FAQ" %}</a> :: <a href="/help">{% trans "Help" %}</a> :: <a href="/privacy">{% trans "Privacy" %}</a></div></td></tr>
+												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> :: <a href="http://aai.grnet.gr/faq">{% trans "FAQ" %}</a> :: <a href="http://aai.grnet.gr/help">{% trans "Help" %}</a> :: <a href="http://aai.grnet.gr/privacy">{% trans "Privacy" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
