HTML changes, be more conformant

--- a/static/overlib.css
+++ b/static/overlib.css
@@ -52,7 +52,7 @@ span.titlebox{
 	margin-top: 3px;
 }
 
-#idpform {
+#idp_selection_form {
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
