--- a/wayf/templates/base.html
+++ b/wayf/templates/base.html
@@ -55,7 +55,7 @@
 					<td>
 						<table >
 						<tr>
-							<td><a href="http://aai.grnet.gr/"> <img src="/static/images/aai.gif" width="655" height="26" alt="aai" title="aai" border="0"></td>
+							<td><a href="http://aai.grnet.gr/"> <img src="/static/images/aai.gif" width="655" height="26" alt="aai" title="aai" border="0"></a></td>
 						</tr>
 						<tr>
 							<td valign="top">
@@ -99,6 +99,7 @@
 </td>
 </tr>
 </tbody></table></tr>
+
 <tr>
          <td id="corner_white_on_grey_bottomx--"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
          <td class="pageContents"><img src="/static/images/s.gif" height="1" width="1" alt="divider" title="divider"></td>
