--- a/wayf/templates/el/wayf_from_sp.html
+++ b/wayf/templates/el/wayf_from_sp.html
@@ -6,7 +6,7 @@
 <p>Βρίσκεστε σε αυτήν τη σελίδα επειδή προσπαθήσατε να προσπελάσετε μια υπηρεσία που χρησιμοποιεί την Υποδομή Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ. Προκειμένου να προχωρήσετε, θα πρέπει να επιλέξετε τον Οικείο Φορέα σας από τον παρακάτω κατάλογο. Προαιρετικά, μπορείτε να αποθηκεύσετε την επιλογή αυτή, ώστε να μην ερωτηθείτε σε επόμενες χρήσεις της υποδομής.</p>
 
 <div id="idpform">
-<form method="post">
+<form id="idp_selection_form" method="post">
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
