--- a/wayf/templates/en-us/wayf.html
+++ b/wayf/templates/en-us/wayf.html
@@ -5,7 +5,7 @@
 {% block content %}
 <p>On this page you can set a default Home Organization for this web browser. Setting a default Home Organization will henceforth redirect you directly to your Home Organization when you access AAI-enabled resources. Don't use this feature if you use several AAI accounts.</p>
 <div id="idpform">
-<form method="post">
+<form id="idp_selection_form" method="post">
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
