index.html text: typo & Dreamspark's new URL

--- a/wayf/templates/en-us/index.html
+++ b/wayf/templates/en-us/index.html
@@ -20,7 +20,7 @@ services.
 </p>
 
 <p>
-The adoption of such services by the <strong>Identity Providers</strong>, i.e.  
+The adoption of the federation by the <strong>Identity Providers</strong>, i.e.  
 the Institutions, yields multiple benefits:
 </p>
 <ul>
@@ -48,7 +48,7 @@ part, or in whole.
 <ul>
 <li><a href="http://pithos.grnet.gr/">&quot;Pithos&quot; Data storage 
 service</a></li>
-<li><a href="https://downloads.channel8.msdn.com/">Microsoft DreamSpark</a>, 
+<li><a href="https://www.dreamspark.com/">Microsoft DreamSpark</a>, 
  free access to software for students</li>
 <li><a href="http://anafandon.grnet.gr/">ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, free access to 
 software for students through the MSDNAA initiative</li>
