Template cleanup: merged FAQ with help/support, added IdP list page

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
 												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> :: <a href="http://aai.grnet.gr/faq">{% trans "FAQ" %}</a> :: <a href="http://aai.grnet.gr/help">{% trans "Help" %}</a> :: <a href="http://aai.grnet.gr/privacy">{% trans "Privacy" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> • <a href="http://aai.grnet.gr/participants">{% trans "Participants" %}</a> • <a href="http://aai.grnet.gr/services">{% trans "Services" %}</a> • <a href="http://aai.grnet.gr/help">{% trans "Help" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
@@ -90,7 +90,7 @@
 	<tr>
 		<td valign="top" width="14"><img src="/static/images/arrow-12.gif" width="12" height="12" alt="arrow"></td>
 		<td valign="top">
-			<p class="footer">{% trans "The Greek Research and Technology Network (GRNET) provides the Hellenic Academic, Research and Education community with advanced services, high-capacity national and international Internet connectivity, assisting the operation of all Universities, Technologial Educational Institutions and Research Institutes in Greece."%}</p>
+			<p class="footer">{% trans "The Greek Research and Technology Network (GRNET) provides the Hellenic Academic, Research and Education community with advanced services, high-capacity national and international Internet connectivity, assisting the operation of all Universities, Technological Educational Institutions and Research Institutes in Greece."%}</p>
 		</td>
 	</tr>
 </table>
