--- a/templates/el/help.html
+++ b/templates/el/help.html
@@ -3,27 +3,84 @@
 {% block title %}{% trans "Help" %}{% endblock %}
 {% block header %}{% trans "Help" %}{% endblock %}
 {% block content %}
+<h2>Υποστήριξη</h2>
 <p>
-Αν αντιμετωπίζετε κάποιο πρόβλημα στη χρήση των υποδομών AAI του ΕΔΕΤ, και εφόσον ανήκετε σε οργανισμό-μέλος της Ομοσπονδίας, μπορείτε να επικοινωνήσετε με τα παρακάτω μέρη, ανάλογα το σημείο εμφάνισης του προβλήματος:
-</p>
+Αν αντιμετωπίσατε κάποιο πρόβλημα στη χρήση της Υποδομής AAI του ΕΔΕΤ και
+εφόσον ανήκετε σε οργανισμό-μέλος της Ομοσπονδίας, μπορείτε να χρησιμοποιήσετε 
+τα ακόλουθα σημεία επικοινωνίας, ανάλογα με το σημείο εμφάνισης του προβλήματος: </p>
 <ul id="userhelp">
-<li>Αν το πρόβλημα εμφανίστηκε <b>εντός των σελίδων της υπηρεσίας που θέλετε να χρησιμοποιήσετε</b> θα πρέπει να επικοινωνήσετε πρώτα με τους υπεύθυνους της υπηρεσίας, στις διευθύνσεις που τυχόν αναφέρονται στις ιστοσελίδες της υπηρεσίας.</li>
+<li>Αν αντιμετωπίσατε πρόβλημα <b>στις σελίδες κάποιας από τις συνδεδεμένες
+υπηρεσίες</b>, θα πρέπει να επικοινωνήσετε πρώτα με τους υπεύθυνους της στις
+διευθύνσεις που αναφέρονται στην αντίστοιχη ιστοσελίδα.</li>
 
 <li>
-Αν το πρόβλημα εμφανίστηκε <b>στις σελίδες ταυτοποίησης του δικού σας ιδρύματος</b> ή οργανισμού (που σας έχει παράσχει τον λογαριασμό πρόσβασης) θα πρέπει να επικοινωνήσετε με το helpdesk του ιδρύματός σας. Εκεί μπορούν να αντιμετωπιστούν διάφορα γενικά προβλήματα του λογαριασμού σας, όπως απώλεια ή αλλαγή password, αλλαγή στοιχείων κλπ.
+Αν αντιμετωπίσατε πρόβλημα <b>στις σελίδες ταυτοποίησης του οικείου φορέα
+σας</b> θα πρέπει να επικοινωνήσετε με το Γραφείο Αρωγής Χρηστών του, όπου
+μπορείτε να λάβετε βοήθεια σχετικά με τα θέματα του λογαριασμού σας, όπως
+απώλεια ή αλλαγή συνθηματικού, μεταβολή των στοιχείων σας κ.λπ.
 {% if idp.contact.email or idp.contact.telephone %}
-Σύμφωνα με τον επιλεγμένο Οικείο Φορέα σας, «<b>{{ idpname }}</b>», μπορείτε να επικοινωνήσετε με τους παρακάτω τρόπους:
+Σύμφωνα με τον επιλεγμένο οικείο φορέα σας, «<b>{{ idpname }}</b>», μπορείτε να
+χρησιμοποιήσετε τους παρακάτω τρόπους επικοινωνίας:
 <ul id="contactdetails">
 {% if idp.contact.email  %}
-        <li><strong>E-mail:</strong> <a href="mailto:{{ idp.contact.email }}?subject={% trans "Shibboleth Authentication Issue" %}">{{ idp.contact.email }}</a></li>
+        <li><strong>E-mail:</strong> <a href="mailto:{{ idp.contact.email }}?subject=AAI+issue+report">{{ idp.contact.email }}</a></li>
 {% endif %}
 {% if idp.contact.telephone %}
-        <li><strong>{% trans "Telephone" %}:</strong> {{ idp.contact.telephone }}</li>
+        <li><strong>Τηλέφωνο:</strong> {{ idp.contact.telephone }}</li>
 {% endif %}
 </ul>
 {% endif %}</li>
-<li>Αν το πρόβλημα εμφανίστηκε <b>στην ενδιάμεση ιστοσελίδα <a
+<li>Αν αντιμετωπίσατε πρόβλημα <b>στην ενδιάμεση ιστοσελίδα <a
 href="http://wayf.grnet.gr">http://wayf.grnet.gr</a></b>,
 μπορείτε να επικoινωνήσετε με το Helpdesk του ΕΔΕΤ.</li>
+</ul>
+
+<h2>Συχνές ερωτήσεις - απαντήσεις</h2>
+<h3>Για χρήστες</h3>
+<ul>
+<li><b>Δεν μπορώ να κάνω login ή ξέχασα το password μου. Ποιός μπορεί να με βοηθήσει;</b>
+<br>Εφόσον o οικείος φορέας σας <a href="{% url grnet_aai.aai.views.idp_list
+%}">συμμετέχει στην Ομοσπονδία</a>, μπορείτε να απευθυνθείτε στο Γραφείο Αρωγής
+Χρηστών του, όπου μπορείτε να λάβετε βοήθεια σχετικά με προβλήματα που μπορεί
+να αφορούν το λογαριασμό σας. Αν το πρόβλημα δε βρίσκεται στο λογαριασμό σας,
+τότε μπορείτε να επικοινωνήσετε με τους διαχειριστές της υπηρεσίας που
+προσπαθείτε να χρησιμοποιήσετε.
+<li><b>Ποιές υπηρεσίες μπορώ να χρησιμοποιήσω μέσω της Υποδομής ΑΑΙ του
+ΕΔΕΤ;</b>
+<br>Δείτε την <a href="/">κεντρική σελίδα</a>.
+<li><b>Τί πρέπει να κάνω για να αποκτήσω λογαριασμό στην Υποδομή AAI;</b>
+<br>Εφόσον το ίδρυμά σας είναι ενταγμένο στην Ομοσπονδία, τότε δεν απαιτείται
+καμία ενέργεια από την πλευρά σας. Το όνομα χρήστη και το συνθηματικό σας είναι
+τα ίδια με αυτά που ισχύουν και για τις υπόλοιπες υπηρεσίες του φορέα σας.
+</ul>
+<h3>Για διαχειριστές φορέων και υπηρεσιών</h3>
+<ul>
+<li><b>Ποιοί φορείς μπορούν να συμμετάσχουν στην Ομοσπονδία του ΕΔΕΤ;</b>
+<br />Η Ομοσπονδία του ΕΔΕΤ απευθύνεται στην ακαδημαϊκή, ερευνητική και εκπαιδευτική
+κοινότητα. Συνεπώς, Πάροχοι Ταυτότητας μπορούν να είναι μόνο ακαδημαϊκά ή
+ερευνητικά ιδρύματα. Οποιοσδήποτε φορέας μπορεί να συμμετέχει στην Υποδομή ως
+Πάροχος μιας ή περισσότερων υπηρεσιών αρκεί οι υπηρεσίες αυτές να προάγουν το
+ακαδημαϊκό, ερευνητικό ή εκπαιδευτικό έργο.</li>
+<li><b>Τι πρέπει να κάνω ώστε οι χρήστες μου να έχουν πρόσβαση στις υπηρεσίες της Ομοσπονδίας;</b>
+<br />Θα πρέπει ο φορέας σας να ενταχθεί ως Πάροχος Ταυτότητας στην Ομοσπονδία.
+Για να επιτευχθεί κάτι τέτοιο απαιτούνται τα εξής:
+<ul>
+  <li>ανάπτυξη έγκυρης υπηρεσίας καταλόγου LDAP και διαδικασιών συντήρησης των
+  στοιχείων των μελών του ιδρύματος</li>
+  <li>εγκατάσταση λογισμικού Identity Provider συμβατού με SAML 2.0.
+  Προτείνεται το <a href="http://shibboleth.internet2.edu/">Shibboleth IdP</a>
+  που έχει αναπτύξει το <a href="http://www.internet2.edu">Internet2</a>.
+  </li>
+</ul>
+<li><b>Πώς μπορώ να προσφέρω μια υπηρεσία στα μέλη της Ομοσπονδίας;</b>
+<br />Απαιτείται η εγκατάσταση λογισμικού Service Provider συμβατού με
+  SAML 2.0. Προτείνεται το <a
+href="http://shibboleth.internet2.edu/">Shibboleth SP</a> που έχει αναπτύξει το
+<a href="http://www.internet2.edu">Internet2</a>.</li>
+<li><b>Ποιός είναι υπεύθυνος για τη διαχείριση της υποδομής της Ομοσπονδίας;</b>
+<br />Την Ομοσπονδία συντηρεί και διαχειρίζεται το Κέντρο Δικτύων (Network
+Operations Centre, NOC) του ΕΔΕΤ. Για προσθαφαιρέσεις, λοιπές αλλαγές και
+επίλυση προβλήματων <i>που αφορούν την ομοσπονδία αυτή καθ' αυτή</i> μπορείτε
+να επικοινωνείτε με το Helpdesk του ΕΔΕΤ.</li>
 </ul>
 {% endblock %}
