--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 										<td width="100%" valign="top">
 											<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%">
 												<tr><td height="100%" valign="top" bgcolor="#D6D3D3"><div class="greyheader"><a style="text-decoration:none" href="http://aai.grnet.gr/">{% trans "GRNET Federation<br />Authentication & Authorization Infrastructure" %}</a></div></td></tr>
-												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> • <a href="http://aai.grnet.gr/participants">{% trans "Participants" %}</a> • <a href="http://aai.grnet.gr/services">{% trans "Services" %}</a> • <a href="http://aai.grnet.gr/help">{% trans "Help" %}</a></div></td></tr>
+												<tr><td valign="bottom" height="100%" ><div class="greysmallheader" ><a href="http://wayf.grnet.gr/">{% trans "Select your home institution" %}</a> • <a href="http://aai.grnet.gr/participants">{% trans "Participants" %}</a> • <a href="http://aai.grnet.gr/services">{% trans "Services" %}</a> • <a href="http://aai.grnet.gr/help">{% trans "Help" %}</a> • <a href="http://aai.grnet.gr/documentation">{% trans "Documentation" %}</a></div></td></tr>
 											</table>
 										</td>
 									</tr>
