--- a/templates/el/index.html
+++ b/templates/el/index.html
@@ -4,106 +4,56 @@
 {% block header %}{% trans "About" %}{% endblock %}
 {% block content %}
 <p>
-Η Υποδομή Ταυτοποίησης και Εξουσιοδότησης του ΕΔΕΤ (<em>Authentication
-Authorization Infrastructure</em> - AAI) επιτρέπει σε διαφορετικούς
-οργανισμούς να συνεργάζονται στην απόδοση δικαιωμάτων πρόσβασης για εφαρμογές
-που έχουν δι-ιδρυματικό χαρακτήρα. Μέσω της υποδομής, ενδιαφερόμενοι φορείς
-μπορούν να παρέχουν υπηρεσίες σε χρήστες φορέων που συμμετέχουν στην
-ομοσπονδία με διαφάνεια, ασφάλεια και ευκολία των χρηστών.
+Η Υποδομή Ταυτοποίησης και Εξουσιοδότησης (<em>Authentication &amp;
+Authorization Infrastructure - AAI</em>) επιτρέπει σε διαφορετικούς οργανισμούς
+να συνεργάζονται στην απόδοση δικαιωμάτων πρόσβασης για εφαρμογές που έχουν
+διιδρυματικό χαρακτήρα. Μέσω της υποδομής, οι χρήστες της Ομοσπονδίας μπορούν
+να λάβουν υπηρεσίες με ασφάλεια και εμπιστευτικότητα των προσωπικών τους
+δεδομένων χρησιμοποιώντας απλά τον ιδρυματικό τους λογαριασμό.
 </p>
 
 <p>
-Η Ομοσπονδία του ΕΔΕΤ απευθύνεται στην ακαδημαϊκή και ερευνητική κοινότητα 
-της Ελλάδας και στους ενδιαφερόμενους παρόχους υπηρεσιών προς τους χρήστες
-αυτής. Ο στόχος της είναι να συντονίζει τη συνεργασία μεταξύ των εμπλεκόμενων
-φορέων και να προωθεί την ανάπτυξη υπηρεσιών δι-ιδρυματικού χαρακτήρα.
+Στην Ομοσπονδία του ΕΔΕΤ συμμετέχουν μέλη της ακαδημαϊκής, ερευνητικής και
+εκπαιδευτικής κοινότητας της Ελλάδας καθώς και φορείς που ενδιαφέρονται να
+παράσχουν υπηρεσίες σε αυτή.
 </p>
 
 <p>
-Η υιοθέτηση της ομοσπονδίας από τους <strong>παρόχους ταυτότητας</strong>,
-δηλαδή τα ιδρύματα, έχει πολλαπλό όφελος για τους τελικούς χρήστες τους:
+Τα μέλη της Ομοσπονδίας κατατάσσονται στις παρακάτω δύο κατηγορίες:
+<ol>
+<li><strong>Πάροχοι Ταυτότητας (Identity Providers, IdP)</strong>: πρόκειται για
+οντότητες (π.χ. ακαδημαϊκά ιδρύματα, ερευνητικά ινστιτούτα κ.λπ.) που
+ταυτοποιούν τους χρήστες τους και πιστοποιούν την ταυτότητα αυτών. Επιπλέον,
+δύνανται να αποστέλλουν προσωπικά δεδομένα των χρηστών τους στους Παρόχους
+Υπηρεσιών με σκοπό την εξουσιοδότηση για τη χρήση των παρεχόμενων υπηρεσιών.</li>
+
+<li><strong>Πάροχοι Υπηρεσιών (Service Providers, SP)</strong>: πρόκειται για
+τις οντότητες που παρέχουν υπηρεσίες στους χρήστες της ακαδημαϊκής, ερευνητικής
+και εκπαιδευτικής κοινότητας της Ελλάδας. Δύνανται να λαμβάνουν από τους
+Παρόχους Ταυτότητας μεμονωμένα στοιχεία χρηστών, με τη συγκατάθεση των πρώτων,
+με σκοπό την εξουσιοδότηση των χρηστών και την παροχή προσωποποιημένων
+υπηρεσιών.</li>
+</ol>
 </p>
+
+<p>
+Η συμμετοχή ενός <strong>Παρόχου Ταυτότητας</strong> στην Ομοσπονδία έχει
+πολλαπλό όφελος για τους χρήστες του:</p>
+
 <ul>
-<li>η είσοδος σε κάθε μία υπηρεσία τρίτου που επιθυμεί το άνοιγμα της σε
-ολόκληρη την κοινότητα δεν απαιτεί την απόκτηση ξεχωριστού λογαριασμού
-(δικαίωμα πρόσβασης). Αρκεί η χρήση του υπάρχοντος ιδρυματικού
-λογαριασμού.</li>
-<li>ο κάθε πάροχος υπηρεσίας στα πλαίσια της ομοσπονδίας δεν χρειάζεται να
-γνωρίζει τα στοιχεία πρόσβασης (username-password) του κάθε χρήστη της
-κοινότητας. Αρκεί να εμπιστεύεται τον φορέα από τον οποίο προέρχεται ο
-χρήστης.</li>
+<li>η είσοδος στις συνδεδεμένες με την Ομοσπονδία υπηρεσίες γίνεται με τη χρήση
+του υπάρχοντος ιδρυματικού λογαριασμού του χρήστη, χωρίς να απαιτείται
+ξεχωριστή εγγραφή.</li>
 <li>τα στοιχεία που αφορούν την ταυτότητα, ιδιότητα και προέλευση του κάθε
-χρήστη δεν είναι απαραίτητο να μεταδίδονται στον κάθε πάροχο υπηρεσίας αφού
-υπάρχει δυνατότητα ανώνυμης πιστοποιημένης πρόσβασης. Σε περιπτώσεις που η
-παροχή συγκεκριμένης υπηρεσίας προϋποθέτει τη γνώση στοιχείων του τελικού
-χρήστη, το πλαίσιο της ομοσπονδίας επιβάλει την έγκριση του παρόχου ταυτότητας
-για την απελευθέρωση τους, ενώ ο τελικός χρήστης ενημερώνεται για τις
-απαιτήσεις.</li>
+χρήστη δεν είναι απαραίτητο να αποστέλλονται στον κάθε πάροχο υπηρεσίας,
+παρέχοντας δυνατότητα <em>ανώνυμης</em> πιστοποιημένης πρόσβασης.</li>
 </ul>
 
 <p>
-Αντίστοιχα, για έναν <strong>πάροχο υπηρεσιών</strong>, υπάρχουν αρκετά
-πλεονεκτήματα, όπως για παράδειγμα ο έλεγχος εξουσιοδότησης σε υπηρεσίες που
-απευθύνονται μόνο στην ακαδημαϊκή και ερευνητική κοινότητα ή μέρος αυτής (π.χ.
-φοιτητές).
+Αντίστοιχα, ένας <strong>Πάροχος Υπηρεσιών</strong> μπορεί να επωφεληθεί από
+την ένταξη στην Ομοσπονδία, αφού μπορεί να παρέχει υπηρεσίες σε μια μεγάλη
+κοινότητα μέσα από ένα κεντρικό σημείο πρόσβασης και χωρίς να χρειάζεται να
+υλοποιεί ξεχωριστές μεθόδους ταυτοποίησης των χρηστών επί τούτου.
 </p>
-
-<p>Οι παρακάτω υπηρεσίες παρέχονται μέσω της υποδομής AAI του ΕΔΕΤ:</p>
-<ul>
-<li><a href="http://pithos.grnet.gr/">Υπηρεσία αποθήκευσης δεδομένων «Πίθος»</a></li>
-<li><a href="https://www.dreamspark.com/">Υπηρεσία Microsoft DreamSpark</a>, διανομής δωρεάν λογισμικού σε φοιτητές</li>
-<li><a href="http://anafandon.grnet.gr/">Υπηρεσία ΑΝΑΦΑΝΔΟΝ-MSDNAA</a>, διανομής δωρεάν λογισμικού σε φοιτητές μέσω προγράμματος MSDNA</li>
-<li><a href="http://iptv.grnet.gr/">Υπηρεσία IPTV</a>, μετάδοσης ψηφιακής τηλεόρασης</li>
-<li><a href="http://rts.grnet.gr/">Υπηρεσία διοργάνωσης τηλεδιασκέψεων</a> και τηλεφωνίας VoIP (Real Time Services)</li>
-</ul>
-
-<p>
-Αυτή τη στιγμή η Ομοσπονδία ΑΑΙ του ΕΔΕΤ υλοποιείται με το λογισμικό
-Shibboleth και απαρτίζεται από τους παρακάτω παρόχους ταυτότητας:
-</p>
-<ul>
-{% for category, insts in idplist %}
-	<li>{{ category.name }}
-	<ul>
-	{% for inst in insts %}
-		<li>{{ inst.name }}</li>
-	{% endfor %}
-	</ul>
-	</li>
-{% endfor %}
-</ul>
-
-<p>
-Για την προώθηση των ομοσπονδιακών υπηρεσιών, το ΕΔΕΤ έχει αναπτύξει πρότυπα
-συστήματα IdP και SP στεγαζόμενα σε εξυπηρετητές («κουτιά» υπηρεσιών), τα
-οποία και διαθέτει σε ιδρύματα της κοινότητας. Στην παραπάνω λίστα, με
-αστερίσκο εμφανίζονται τα ιδρύματα που χρησιμοποιούν εξοπλισμό του ΕΔΕΤ.
-Επιπλέον καταβάλλεται σημαντική προσπάθεια ώστε οι υπηρεσίες που διατίθενται
-είτε στο σύνολο της ακαδημαϊκής κοινότητας, είτε σε επιλεγμένους συνεργάτες να
-χρησιμοποιούν την υποδομή AAI της ομοσπονδίας.
-</p>
-
-<p>
-Ταυτόχρονα, προσφέρεται και σύνδεση με τις <a
-href="http://www.edugain.org">Ευρωπαϊκές Υπηρεσίες AAI του eduGAIN</a>
-που είναι υπό ανάπτυξη στα πλαίσια του ερευνητικού έργου GÉANT2, ώστε τα μέλη
-της κοινότητας να μπορούν να απολαμβάνουν και υπηρεσίες από ευρωπαϊκούς φορείς
-και αντιστρόφως.
-</p>
-
-<p>
-Τα παραπάνω μπορούν να διατεθούν και έτοιμα από το ΕΔΕΤ με τη μορφή ενός
-προσαρμοσμένου «κουτιού» υπηρεσιών. Για περισσότερες πληροφορίες μπορείτε να
-επικοινωνήσετε με το Helpdesk του ΕΔΕΤ.
-</p>
-
-<p>Τεκμηρίωση:</p>
-<ul>
-<li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&amp;modname=Downloads&amp;action=downloadsviewfile&amp;ctn=776&amp;language=el">Γενικές αρχές προς διαχειριστές υπηρεσιών καταλόγου, ΙdP και SP για τις διαδικασίες παρoχής υπηρεσιών AAI με χρήση του Shibboleth</a></li>
-<li><a href="http://vnoc.grnet.gr/engine/index.php?op=modload&amp;modname=Downloads&amp;action=downloadsviewfile&amp;ctn=855&amp;language=el">Οδηγός εγκατάστασης και ρύθμισης Shibboleth 1.3</a></li>
-<li><a href="http://shibboleth.internet2.edu/">Λογισμικό Shibboleth</a></li>
-<li><a href="http://www.switch.ch/aai/shibboleth.html">Τεκμηρίωση υλοποίησης του αντίστοιχης ομοσπονδίας του Ελβετικού NREN (SWITCH)</a></li>
-<li><a href="http://www.incommonfederation.org">Τεκμηρίωση υλοποίησης του αντίστοιχου project των ιδρυμάτων των Ηνωμένων Πολιτειών (Internet2)</a></li>
-</ul>
 
 {% endblock %}
